{
  "CPref": {
    "ALL": "All",
    "ADMIN": "Administrator",
    "REJECTED": "Rejected",
    "WFA": "Wait Confirm",
    "WAIT_CONFIRM": "Wait Confirm",
    "APPROVED": "Approved",
    "COMPLETED": "Completed",
    "WAIT_TRANSFER": "Wait Transfer",
    "TRANSFER_CONFIRMED": "Transfer Confirmed",
    "UN_CONFIRM": "Un Confirm",
    "CANCELED": "Canceled",
    "DRAFT": "Draft",
    "MALE": "Male",
    "FEMALE": "Famale",
    "KT": "Accountant",
    "ORDERER": "Order Side",
    "FARMER": "Farmer Side"
  },
  "pages": {
    "login": {
      "introduction": {
        "Skip": "Bỏ qua",
        "Next": "Tiếp tục",
        "Get started": "Bắt đầu"
      },
      "login": {
        "Email address": "Địa chỉ Email",
        "Password": "Mật khẩu",
        "Log in": "Đăng nhập",
        "Remember me": "Ghi nhớ tài khoản",
        "Forgot password": "Quên mật khẩu",
        "Password reset": "Cấp lại mật khẩu",
        "terms of service": "Bằng cách đăng nhập, bạn đã đồng ý với các điều khoản dịch vụ và điều kiện bảo mật của ứng dụng",
        "You don't have an account yet?": "Bạn chưa có tài khoản? ",
        "Register": "Đăng ký"
      },
      "otp_verification": {
        "Sign Up Success": "Đăng ký thành công",
        "Change password successfully": "Đổi mật khẩu thành công",
        "Confirm OTP": "Xác nhận OTP",
        "Check your registered email": "Kiểm tra email đã đăng ký của bạn. Chúng tôi đã gửi cho bạn mã PIN",
        "Confirm": "Xác nhận"
      },
      "register": {
        "Fullname": "Fullname",
        "Gender": "Gender",
        "Phone number": "Phone number",
        "Re-enter password": "Re-enter password",
        "Account Type": "Account Type",
        "Professional Degree": "Professional Degree",
        "Do you already have an account?": "Do you already have an account?"
      }
    }
  },
  "utils": {
    "app_console": {
      "minutes ago": "phút trước",
      "hours ago": "giờ trước",
      "days ago": "ngày trước",
      "months ago": "tháng trước",
      "years ago": "năm trước",
      "Agreement": "Thỏa thuận",
      "million": "triệu",
      "billion": "tỷ",
      "System management": "Quản trị hệ thống",
      "Undefined": "Chưa xác định"
    }
  },
  "widgets": {
    "drawer": {
      "Log out": "Đăng xuất"
    },
    "form": {
      "input": {
        "rulesRequired": "Enter {}",
        "Please choose file": "Please choose file",
        "Enter": "Enter {}",
        "Choose": "Choose {}"
      },
      "select": {
        "Search": "Search",
        "rulesRequired": "Choose {}"
      },
      "date": {
        "Save": "Lưu lại",
        "Time from": "Giờ bắt đầu",
        "Time to": "Giờ kết thúc",
        "Error message": "You have not selected the full date",
        "rulesRequired": "Choose {}"
      },
      "upload": {
        "Upload": "Tải lên",
        "Cancel": "Hủy bỏ",
        "Select image from gallery": "Chọn hình ảnh từ thư viện",
        "Select multiple images from gallery": "Chọn nhiều hình ảnh từ thư viện",
        "Take a photo": "Chụp ảnh",
        "Select Video from gallery": "Chọn Video từ thư viện",
        "Shoot a movie": "Quay một đoạn phim"
      }
    },
    "list": {
      "details": {
        "Empty": "Trống",
        "Phone number copied": "Đã sao chép số điện thoại",
        "Successfully copied": "Đã sao chép thành công"
      }
    },
    "description_text_widget": {
      "See more": "Xem thêm"
    }
  },
  "introduction": {
    "Title": {
      "0": "Dịch vụ nha khoa",
      "1": "Phòng khám nha khoa",
      "2": "Bác sĩ chuyên nghiệp"
    },
    "Content": {
      "0": "Ngày nay các dịch vụ làm đẹp nha khoa, răng hàm mặt đang dần phổ biến và được nhiều người quan tâm. Vì vậy, Uberental đã cung cấp đa dạng các dịch vụ nha khoa với giá thành hợp lý nhất",
      "1": "Phòng khám nha khoa của bạn đang có nhiều khách hàng nhưng lại thiếu bác sĩ. Hãy đặt lịch hẹn cho các bác sĩ của Uberental để đến phòng khám của bạn và điều trị cho các khách hàng",
      "2": "Với đội ngũ bác sĩ có trình độ chuyên môn nghiệp vụ cao, có kinh nghiệm lâu năm được Uberental chọn lọc kĩ càng. Giúp mang đến cho khách hàng những phương pháp điều trị tốt nhất, tiết kiệm nhất. Nhằm đáp ứng mọi nhu cầu khám chữa bệnh của khách hàng"
    }
  }
}
