...
                                  WButton(
                                    type: TextButton,
                                    style: TextButton.styleFrom(
                                      padding: const EdgeInsets.all(CSpace.xs),
                                    ),
                                    onPressed: () => {},
                                    child: const Text('Điều khoản dịch vụ', style: TextStyle(fontSize: CFontSize.sm)),
                                  ),
                                  Text("và", style: TextStyle(color: CColor.black.shade300, fontSize: CFontSize.sm, height: 1.3)),
                                  WButton(
                                    type: TextButton,
                                    style: TextButton.styleFrom(
                                      padding: const EdgeInsets.all(CSpace.xs),
                                    ),
                                    onPressed: () => {},
                                    child: const Text('Điều kiện bảo mật', style: TextStyle(fontSize: CFontSize.sm)),
                                  ),
                                ],
                              ),
                            ),
                            Text("của ứng dụng Uberental", style: TextStyle(color: CColor.black.shade300, fontSize: CFontSize.sm)),
                          ],
...
