...
          padding: const EdgeInsets.all(CSpace.xl3),
          children: [
            SizedBox(height: 170, child: CIcon.forgotPassword),
            const VSpacer(CSpace.xl5),
            const Center(
              child: Text(
                'Quên mật khẩu?',
                style: TextStyle(fontWeight: FontWeight.w600, fontSize: CFontSize.xl2),
              ),
            ),
            const VSpacer(CSpace.xl5),
            Text(
              'Đừng lo, hãy nhập email đã đăng ký của bạn bên dưới để nhận mã OTP xác nhận lấy lại mật khẩu',
...
